--- a/templates/index.html
+++ b/templates/index.html
@@ -11,21 +11,22 @@
     h1 {
         color: red;
     }
-
+    iframe{
+        width: 100%;
+        height: 65%;
+        border: 0px;
+    }
 </style>
 </head>
 
 
 <body>
-    <h1>Covid Stats!</h1><br>
-    <form method="POST">
-        <label >Enter a Country Code</label><br><br>
-    <input placeholder="Country Code" name="text">
-    <input type="submit">
-</form>
-    <img src="{{image }}">
-
-
-    <p>You have {{ count }} Visitors.</p>
+    <form>
+        <h2>Enter Country Name</h2>
+        <input name="text" type="text" placeholder="Enter Country Name">
+        <input type="submit">
+    </form>
+    <iframe src="{{ img }}"></iframe>
+    <label>Visitors: {{ v }}</label>
 </body>
 </html>
